# opengl-primer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  make.sh
apps/: CMakeLists.txt  main.cpp
cmake/: EmbedResource.cmake
include/glad/: glad.h
src/: CMakeLists.txt
src/primer/: CMakeLists.txt  buffer_resource.h  build_primer.cpp  build_primer.h  camera.cpp  camera.h  frame_delta.h  gl_resource.h  gl_single_resource.h  glad.c  glfw.cpp  glfw.h  glfw_window.cpp  glfw_window.h  primer.cpp  primer.h  shader.h  shader_program.cpp  shader_program.h  shader_program_resource.h  shader_resource.h  texture.cpp  texture.h  texture_resource.h  vertex_array_resource.h  vertex_binding.cpp  vertex_binding.h
src/primer/shaders/: CMakeLists.txt  fragment_shader.h  vertex_shader.h
